--- a/templates/main.html
+++ b/templates/main.html
@@ -2,9 +2,9 @@
         <div class=\ "ui-body ui-body-a ui-corner-all loxberry-logo\">
                 <div style=\ "margin: 5%;\">
                 			<p class= "<TMPL_VAR NAME=MESSAGETYPE> maininfo"><TMPL_VAR NAME=MESSAGE></p>
-                        <h2>Einstellungen</h2>
+                        <h2>Instellingen</h2>
                         <div>
-                        		<p>In diesem Bereich bitte die korrekte Anzahl der benötigten Ein- und Ausgänge angeben. Nach dem speichern wird die Kanalkonfiguration angepasst </p>
+                        		<p>Geef hier het juiste aantal vereiste ingangen en uitgangen in. Na het opslaan wordt de configuratie aangepast </p>
                         </div>
                         <form method="post" data-ajax="false" name="main_form" id="main_form" action="./index.cgi" class="separatingline">
                                 <input type="hidden" id="saveCount" name="saveCount" value="saveCount">
@@ -12,7 +12,7 @@
                                         <table class="formtable" border="0" width="100%">
                                                 <tr>
                                                         <td width="25%" style="text-align: right;">
-                                                                <label id="input_count_label">Anzahl Eingänge:</label>
+                                                                <label id="input_count_label">Aantal ingangen:</label>
                                                         </td>
                                                         <td width="15%" colspan="2">
                                                                 <select name="input_count" id="input_count">
@@ -26,7 +26,7 @@
                                                                 &nbsp;
                                                         </td>
                                                         <td width="25%" style="text-align: right;">
-                                                                <label id="output_count_label">Anzahl Ausgänge:</label>
+                                                                <label id="output_count_label">Aantal uitgangen:</label>
                                                         </td>
                                                         <td width="15%" colspan="2">
                                                                 <select name="output_count" id="output_count">
@@ -44,20 +44,20 @@
                                                 <tr>
                                                         <td width="40%">&nbsp</td>
                                                         <td width="10%" colspan="2">
-                                                                <input id="submit" name="submit" type="reset" value="Abbrechen">
+                                                                <input id="submit" name="submit" type="reset" value="Annuleren">
                                                         </td>
                                                         <td width="10%" colspan="2">
-                                                                <input id="submit" name="submit" type="submit" value="Speichern">
+                                                                <input id="submit" name="submit" type="submit" value="Opslaan">
                                                         </td>
                                                         <td width="40%">&nbsp</td>
                                                 </tr> 
                                         </table>  
                                 </div>
                         </form>
-                        <h2>Kanalkonfiguration</h2>
+                        <h2>Configuratie</h2>
                         <div>
-                        		<p>Hier werden die Zuordnungen der physikalischen Anschlüsse des Raspberrys zu den Kanälen der Ein- und Ausgänge vorgenommen. 
-                        		In das Eingabefeld wird hierfür für jeden Kanal des verwendete GPIO Anschluss eingetragen. Die GPIO Pin Belegung kann <a href="https://www.elektronik-kompendium.de/sites/raspberry-pi/1907101.htm">hier</a> nachgelesen werden.</p>
+                        		<p>De instellingen van de fysieke verbindingen van de Raspberry naar de in- en uitgangen worden hier gemaakt. 
+                        		De GPIO-verbinding kan hier worden ingegeven in het invoerveld. De GPIO pin-toewijzing kan <a href="https://www.elektronik-kompendium.de/sites/raspberry-pi/1907101.htm">hier</a> opgezocht worden.</p>
                         </div>
                         <form method="post" data-ajax="false" name="main_form" id="main_form" action="./index.cgi">
                         		<input type="hidden" id="saveIoConfig" name="saveIoConfig" value="saveIoConfig">
@@ -65,7 +65,7 @@
 	                        <table class="formtable" border="0" width="100%">
 				                 <tr>
 				                 	<td width="50%" style="vertical-align: top;">
-				                 		<h2 class="tableheadline">Eingänge</h2>
+				                 		<h2 class="tableheadline">Input</h2>
 				                 		<table class="formtable" border="0" width="100%">
 				                 			<tr>
 				                 				<td></td>
@@ -73,30 +73,30 @@
 				                 			</tr>
 				                 			<TMPL_LOOP NAME=number_of_inputs>
 				                 				<tr >
-				                 					<td width="50%" class= "<TMPL_VAR NAME=class> inputlabel">Eingänge <TMPL_VAR NAME=current>:</td>
+				                 					<td width="50%" class= "<TMPL_VAR NAME=class> inputlabel">Input <TMPL_VAR NAME=current>:</td>
 				                 					<td width="50%" class= "<TMPL_VAR NAME=class> separatingline">
 				                 						<input type='text' id="input<TMPL_VAR NAME=current>" name="input<TMPL_VAR NAME=current>" value="<TMPL_VAR value>"></input>
 				                 						<p><TMPL_VAR NAME=errormessage></p>
 				                 						<div class="wiring">
 				                 						<fieldset>
-				                 							<legend>Beschaltung:</legend>
+				                 							<legend>Bedrading:</legend>
 														  	<TMPL_VAR SELECTLIST>
 														</fieldset>
 				                 						</div>
 				                 					</td>
 				                 				</tr>
 				                 			</TMPL_LOOP>
-				                 			<tr><td colspan=2><p>Allgemeine Einstellungen</td></tr>
+				                 			<tr><td colspan=2><p>Algemene instellingen</td></tr>
 				                 			<tr>
-				                 				<td class= "<TMPL_VAR NAME=input_prefix_error_class> inputlabel">Präfix:</td>
+				                 				<td class= "<TMPL_VAR NAME=input_prefix_error_class> inputlabel">Prefix:</td>
 				                 				<td class= "<TMPL_VAR NAME=input_prefix_error_class>">
 				                 					<input type='text' id="input_prefix" name="input_prefix" value="<TMPL_VAR input_prefix>"></input>
 				                 					<p><TMPL_VAR NAME=input_prefix_error_message></p>
 				                 					</td>
 				                 			</tr>
-				                 			<tr><td colspan=2><p class="help">Der Präfix dient bei Verwendung mehrerer Loxberrys mit diesem Plugin, die Eingänge dem Gerät zuzuordnen</p> </td></tr>
+				                 			<tr><td colspan=2><p class="help">Wanneer u meerdere Loxberrys met deze plug-in gebruikt, wordt het voorvoegsel gebruikt om de ingangen aan het apparaat toe te wijzen</p> </td></tr>
 				                 			<tr>
-				                 				<td class= "<TMPL_VAR NAME=class> inputlabel">Abtastintervall:</td>
+				                 				<td class= "<TMPL_VAR NAME=class> inputlabel">Interval:</td>
 				                 				<td>
 				                 					<select name="input_samplingrate" id="input_samplingrate">
                                                           <TMPL_LOOP NAME=input_samplingrate>
@@ -106,8 +106,8 @@
 				                 					
 				                 				</td>
 				                 			</tr>
-				                 			<tr><td colspan=2> <p class="help">Das Abtastintervall sollte immer halb so lang sein, wie die Signallänge, die am Eingang minimal anliegt. Nur so ist gewährleistet, dass der Wert zuverlässig gelesen werden kann. Doch Achtung: ein kurzes Intervall führt zu einer strken
-				                 				Belastung des Prozessors.</p></td></tr>
+				                 			<tr><td colspan=2> <p class="help">Het interval moet altijd half zo lang zijn als de minimale signaallengte aan de ingang. Dit is de enige manier om ervoor te zorgen dat de waarde betrouwbaar kan worden gelezen. Maar wees voorzichtig: een kort interval leidt tot een sterke
+				                 				processor belasting.</p></td></tr>
 				                 			<tr>
 				                 				<td class= "<TMPL_VAR NAME=class> inputlabel">Miniserver:</td>
 				                 				<td>
@@ -121,7 +121,7 @@
 				                 		
 				                 	</td>
 				                 	<td width="50%" style="vertical-align: top;">
-				                 		<h2 class="tableheadline">Ausgänge</h2>
+				                 		<h2 class="tableheadline">Output</h2>
 				                 		<table class="formtable" border="0" width="100%">
 				                 			<tr>
 				                 				<td></td>
@@ -129,7 +129,7 @@
 				                 			</tr>
 				                 			<TMPL_LOOP NAME=number_of_outputs>
 				                 				<tr>
-				                 					<td width="50%" class= "<TMPL_VAR NAME=class> inputlabel">Ausgang <TMPL_VAR NAME=current>:</td>
+				                 					<td width="50%" class= "<TMPL_VAR NAME=class> inputlabel">Output <TMPL_VAR NAME=current>:</td>
 				                 					<td width="50%" class= "<TMPL_VAR NAME=class>">
 				                 						<input type='text' id="output<TMPL_VAR NAME=current>" name="output<TMPL_VAR NAME=current>" value="<TMPL_VAR value>"></input>
 				                 						<p><TMPL_VAR NAME=errormessage></p>
@@ -145,10 +145,10 @@
                                  <tr>
                                          <td width="40%">&nbsp</td>
                                          <td width="10%" colspan="2">
-                                                 <input id="submit2" name="submit2" type="reset" value="Abbrechen">
+                                                 <input id="submit2" name="submit2" type="reset" value="Annuleren">
                                          </td>
                                          <td width="10%" colspan="2">
-                                                 <input id="submit2" name="submit2" type="submit" value="Speichern">
+                                                 <input id="submit2" name="submit2" type="submit" value="Opslaan">
                                          </td>
                                          <td width="40%">&nbsp</td>
                                  </tr> 
