--- a/templates/main.html
+++ b/templates/main.html
@@ -17,7 +17,7 @@
                                                         <td width="15%" colspan="2">
                                                                 <select name="input_count" id="input_count">
                                                                         <TMPL_LOOP NAME=select_input_count>
-                                                                                <option value='<TMPL_VAR NAME=COUNT>' <TMPL_VAR NAME=CHOOSED>><TMPL_VAR NAME=COUNT></option>
+                                                                                <option value='<TMPL_VAR NAME=COUNT>' <TMPL_VAR NAME=CHOOSED>><TMPL_VAR NAME=COUNT_LABEL></option>
                                                                         </TMPL_LOOP>
                                                                 </select>
                                                                 
@@ -31,7 +31,7 @@
                                                         <td width="15%" colspan="2">
                                                                 <select name="output_count" id="output_count">
                                                                         <TMPL_LOOP NAME=SELECT_OUTPUT_COUNT>
-                                                                                <option value='<TMPL_VAR NAME=COUNT>' <TMPL_VAR NAME=CHOOSED>><TMPL_VAR NAME=COUNT></option>
+                                                                                <option value='<TMPL_VAR NAME=COUNT>' <TMPL_VAR NAME=CHOOSED>><TMPL_VAR NAME=COUNT_LABEL></option>
                                                                         </TMPL_LOOP>
                                                                 </select>                                                
                                                         </td>  
